correccion de vista newproducts

--- a/src/views/products/newproduct.ejs
+++ b/src/views/products/newproduct.ejs
@@ -33,7 +33,7 @@
             </div>
 
             <div>
-                <label for="tallesdisponibles">Categorias de interes:</label>
+                <label for="tallesdisponibles">Talles Disponibles:</label>
                 <input id="tallesdisponibles" type="checkbox" name="talle36" value="talle36" class="controlnewproduct-talle">36</input>
                 <input id="tallesdisponibles" type="checkbox" name="talle37" value="talle37" class="controlnewproduct-talle">37</input>
                 <input id="tallesdisponibles" type="checkbox" name="talle38" value="talle38" class="controlnewproduct-talle">38</input>
