Cambio el nombre a productAdd y lo vuelvo a rutear

--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -9,7 +9,7 @@
     <main>
         <div class="navegacion-de-sitios">
             <ol class="nav-site">
-                <li><a href=#>Inicio</a></li>
+                <li><a href="/">Inicio</a></li>
                 <span>></span>
                 <li><a href=#>Hombres</a></li>
                 <span>></span>
