--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -8,7 +8,7 @@
 
     <main>
         <div class="login-bar1">
-        <h2 class="titulo-registro1">Registrarme</h2>
+        <h2 class="title">Registrarme</h2>
         <form action="/register" method="POST" class="register-form">
             <div class="register-container">
                 <h3 class="datos-personales">DATOS PERSONALES</h3>
