--- a/src/views/products/productAdd.ejs
+++ b/src/views/products/productAdd.ejs
@@ -18,7 +18,7 @@
                 <input type="text" name="detail" id="detail" placeholder="Detalle del producto" class="control1" required />
             </div>
             <div class="control-formulario1">
-                <label for="image">Imagen del producto</label>
+                <label for="image">Imagen del producto:</label>
                 <input type="file" name="image" accept=".jpg" />
             </div>
             <div>
