agregando notas del cierre sprint 3, agregando formulario de edicion productos, agregando vinculos a productos destacados del productDetail

--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -92,7 +92,7 @@
             <h3 class="margin-products">Otros productos que podrian interesarte...</h3>
             <div class="destacados">
                 <article class="recomendado-article a1">
-                    <img src="/images/adidas2.png" alt="ADIDAS NITE JOGGER 3M NAVY">
+                    <a href="/productos/productDetail/6"><img src="/images/adidas2.png" alt="ADIDAS NITE JOGGER 3M NAVY"></a>
                     <div class="contenedor-descripcion">
                         <div>ADIDAS NITE JOGGER 3M NAVY</div>
                         <i class="fas fa-arrow-circle-left izarrow"></i>
@@ -101,7 +101,7 @@
                     </div>
                 </article>
                 <article class="recomendado-article a2">
-                    <img src="/images/puma1.png" alt="PUMA RS-X TOYS BONNIE BLUE (W">
+                    <a href="/productos/productDetail/7"><img src="/images/puma1.png" alt="PUMA RS-X TOYS BONNIE BLUE"></a>
                     <div class="contenedor-descripcion">
                         <div>PUMA RS-X TOYS BONNIE BLUE (W)</div>
                         <i class="fas fa-arrow-circle-left izarrow"></i>
@@ -110,7 +110,7 @@
                     </div>
                 </article>
                 <article class="recomendado-article a3">
-                    <img src="/images/nike1.png" alt="NIKE AIR MAX 90 INFRARED (2020)">
+                    <a href="/productos/productDetail/8"><img src="/images/nike1.png" alt="NIKE AIR MAX 95 OG NEON (2020)"></a>
                     <div class="contenedor-descripcion">
                         <div>NIKE AIR MAX 95 OG NEON (2020)</div>
                         <i class="fas fa-arrow-circle-left izarrow"></i>
@@ -119,7 +119,7 @@
                     </div>
                 </article>
                 <article class="recomendado-article a4">
-                    <img src="/images/new-balance5.png" alt="NEW BALANCE 327 CASABLANCA GREEN LOGO">
+                    <a href="/productos/productDetail/9"><img src="/images/new-balance5.png" alt="NEW BALANCE 327 CASABLANCA GREEN LOGO"></a>
                     <div class="contenedor-descripcion">
                         <div>NEW BALANCE 327 CASABLANCA GREEN LOGO</div>
                         <i class="fas fa-arrow-circle-left izarrow"></i>
