--- a/src/views/products/productEdit.ejs
+++ b/src/views/products/productEdit.ejs
@@ -6,7 +6,7 @@
     <%- include("../partials/header")%>
 
     <main class="auto">
-        <h2 class="title">Agregue un nuevo producto</h2>
+        <h2 class="title">Edite su producto</h2>
         <form action="#" method="POST" class="form">
             <div class="control-formulario1">
                 <label for="name">Nombre del producto:</label>
