Agrego el color del producto al archivo productAdd/Edit

--- a/src/views/products/productAdd.ejs
+++ b/src/views/products/productAdd.ejs
@@ -44,6 +44,9 @@
                 <input type="checkbox" name="category" id="category" value="t46" />46
             </div>
             <div class="control-formulario1">
+                <label for="color" class="negrita">Color del producto: <input type="color" name="color" id="color" /></label>
+            </div>
+            <div class="control-formulario1">
                 <label for="price">Precio</label>
                 <input type="text" name="price" id="price" placeholder="$9.999" class="control1" required
                     minlength="4" />
