renombrando rutas y controladores

--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -76,7 +76,7 @@
 
         <section class="recomendados">
             <article class="recomendado-article a1">
-                <a href="/productos/productDetail/3"><img src="/images/adidas1.png" alt="ADIDAS OZWEEGO ORANGE (YOUTH)"></a>
+                <a href="/products/3"><img src="/images/adidas1.png" alt="ADIDAS OZWEEGO ORANGE (YOUTH)"></a>
                 <div class="contenedor-descripcion">
                     <div>ADIDAS OZWEEGO ORANGE (YOUTH)</div>
                     <i class="fas fa-arrow-circle-left izarrow"></i>
@@ -85,7 +85,7 @@
                 </div>
             </article>
             <article class="recomendado-article a2">
-                <a href="/productos/productDetail/2"><img src="/images/puma3.png" alt="PUMA FUTURE RIDER NES"></a>
+                <a href="/products/2"><img src="/images/puma3.png" alt="PUMA FUTURE RIDER NES"></a>
                 <div class="contenedor-descripcion">
                     <div>PUMA FUTURE RIDER NES (2020)</div>
                     <i class="fas fa-arrow-circle-left izarrow"></i>
@@ -94,7 +94,7 @@
                 </div>
             </article>
             <article class="recomendado-article a3">
-                <a href="/productos/productDetail/4"><img src="/images/nike3.png" alt="NIKE AIR MAX 90 INFRARED (2020)"></a>
+                <a href="/products/4"><img src="/images/nike3.png" alt="NIKE AIR MAX 90 INFRARED (2020)"></a>
                 <div class="contenedor-descripcion">
                     <div>NIKE AIR MAX 90 INFRARED (2020)</div>
                     <i class="fas fa-arrow-circle-left izarrow"></i>
@@ -103,7 +103,7 @@
                 </div>
             </article>
             <article class="recomendado-article a4">
-                <a href="/productos/productDetail/5"><img src="/images/new-balance4.png" alt="NEW BALANCE 1300 LEVI'S (2020)"></a>
+                <a href="/products//5"><img src="/images/new-balance4.png" alt="NEW BALANCE 1300 LEVI'S (2020)"></a>
                 <div class="contenedor-descripcion">
                     <div>NEW BALANCE 1300 LEVI'S (2020)</div>
                     <i class="fas fa-arrow-circle-left izarrow"></i>
