--- a/src/views/products/productEdit.ejs
+++ b/src/views/products/productEdit.ejs
@@ -7,7 +7,7 @@
 
     <main class="auto">
         <h2 class="title">Edite su producto</h2>
-        <form action="#" method="POST" class="form">
+        <form action="/products/:id" method="POST" class="form">
             <div class="control-formulario1">
                 <label for="name">Nombre del producto:</label>
                 <input type="text" name="nombre" id="name" placeholder="Nombre del producto" class="control1" required
