--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -10,10 +10,10 @@
             <a href="/" class="home"><img src="/images/kicks.png" alt="logo kicks" class="logo"></a>
             <div class="icons-section">
                 <a href="/users/login"><i class="fas fa-user"></i></a>
-                <a href="/productos/productCart"><i class="fas fa-shopping-cart"></i></a>
+                <a href="/products/productCart"><i class="fas fa-shopping-cart"></i></a>
                 <a href="/"><i class="fas fa-share-alt-square"></i></a>
             </div>
-            <form action="/productos/productDetail" method="GET" class="search-form">
+            <form action="/products/productDetail" method="GET" class="search-form">
                 <input type="text" name="search" placeholder="¿Qué estás buscando?" class="campo-busqueda">
                 <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
             </form>
