Agrego la carpeta data con el archivo products.json

--- a/src/views/products/productAdd.ejs
+++ b/src/views/products/productAdd.ejs
@@ -24,9 +24,9 @@
             <div>
                 <label for="gender" class="negrita">Genero</label>
                 <br />
-                <input type="radio" name="gender" id="gender" />Masculino
-                <input type="radio" name="gender" id="gender" />Femenino
-                <input type="radio" name="gender" id="gender" />Otros
+                <input type="radio" name="gender" id="gender" value="male" />Masculino
+                <input type="radio" name="gender" id="gender" value="female"/>Femenino
+                <input type="radio" name="gender" id="gender" value="other"/>Otros
             </div>
             <br />
             <div>
