--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -99,7 +99,7 @@ body{
 .header-bottom-bar ul{ 
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     list-style: none;
 }
 .linknav{
