--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -456,6 +456,9 @@ div.medios-pago{
     box-shadow:1px 1px 2px 2px rgb(0 0 0 / 20%) 
     
 }
+.izarrow , .derarrow{
+    display: none;
+}
 /*MAIN PRODUCTDETAIL */
 
 .nav-site{
